stability visibility fixes

--- a/psychotropics/style.css
+++ b/psychotropics/style.css
@@ -1,13 +1,17 @@
 #iboga, #kratom, #peyote, #yopo, #salvia {
-	width: 160px;
-	height: 160px;
+	width: 160;
+	height: 160;
 	background-color: white;
+}
+button > img {
+	height: 160;
+	width: 160;
 }
 body {
 	background: url(images/bg.png) repeat left top;
 	position: absolute;
-	width: 1280px;
-	height: 1024px;
+	width: 100%;
+	height: 100%;
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -24,7 +28,15 @@ body {
 	margin-bottom: 5%;
 }
 #otherButtons {
-	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+	width: 70%;
+	color: white;
+	font-size: 20pt;
+}
+table, td, tr {
+	padding: 0;
+	margin: 0;
 }
 #plantpage {
 	width: 100%;
@@ -37,8 +49,8 @@ body {
 #trip {
 	text-align: justify;
 	margin: 0 auto;
-	padding-top: 10%;
-	width: 70%;
+	padding-top: 5%;
+	width: 60%;
 	font-size: 20pt;
 	color: white;
 }
@@ -48,9 +60,12 @@ body {
 #plant {
 	display: none;
 	margin: 0 auto;
-	padding-top: 5%;
+	/*padding-top: 5%;*/
 	width: 50%;
 	color: red;
+}
+#directive {
+	font-size: 20pt;
 }
 #again {
 	display: none;
@@ -58,6 +73,7 @@ body {
 }
 #back {
 	display: none;
+	font-size: 20pt;
 	width: 80%;
 }
 #headerText {
